# quickemu-manager

./: .clippy.toml  .gitignore  Cargo-tui.toml  Cargo.toml  Cross.toml  DEBUGGING_DIOXUS.md  README.md  RUST_CONVERSION_CHECKLIST.md  SPICE_IMPLEMENTATION_GUIDE.md  SPICE_INTEGRATION_STATUS.md  SPICE_WEB_INTEGRATION_PLAN.md  TECHNICAL_BRIEFING.md  TESTING_PLAN.md  TODO.md  build-all.sh  build.sh  clippy.toml  justfile
.github/: README.md  README_BADGES.md
.github/workflows/: ci.yml  dioxus-app.yml  gtk4-app.yml  quickemu-manager-ci.yml  quickemu-manager-dioxus.yml  quickemu-manager-gtk4.yml  release-all.yml  release.yml  spice-client-publish.yml  spice-client-tests.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/models/: config.rs  metrics.rs  mod.rs  vm.rs
core/src/services/: binary_discovery.rs  config_manager.rs  discovery.rs  metrics.rs  mod.rs  parser.rs  process_monitor.rs  quickget.rs  spice_proxy.rs  vm_manager.rs  vnc_proxy.rs
dioxus-app/: Cargo.toml  Dioxus.toml  SPICE_INTEGRATION.md  index.html  input.css  package-lock.json  package.json  tailwind.config.js
dioxus-app/assets/: main.css  tailwind.css
dioxus-app/assets/spice-client/: spice-console.html
dioxus-app/src/: api.rs  main.rs  models.rs  server_functions.rs  server_only.rs  spice_client.rs  spice_client_wrapper.rs  vnc_client.rs  vnc_protocol.rs
dioxus-app/src/components/: app.rs  basic_console.rs  home.rs  keyboard_shortcuts.rs  mod.rs  settings_modal.rs  spice_viewer.rs  titlebar.rs  vm_card.rs  vm_console.rs  vm_create_modal.rs  vm_detail.rs  vm_edit_modal.rs  vm_metrics.rs  vm_screen_modal.rs  vnc_viewer.rs
dioxus-app/src/services/: mod.rs  vm_manager.rs
docs/: CONSOLE_REMOTE_ACCESS.md  CONSOLE_TROUBLESHOOTING.md  PRODUCT_GUIDELINES.md  SPICE_IMPLEMENTATION.md  TECHNICAL_BRIEFING.md  app.md
gtk4-app/: Cargo.toml
gtk4-app/resources/: resources.gresource.xml  style.css
gtk4-app/resources/ui/: header_bar.ui  main_window.ui  settings_dialog.ui  vm_card.ui
gtk4-app/src/: lib.rs  main.rs
gtk4-app/src/ui/: main_window.rs  mod.rs  settings_dialog.rs  spice_display.rs  vm_card.rs  vm_console_window.rs  vm_create_dialog.rs  vm_edit_dialog.rs
resources/ui/: main_window.ui  vm_create_dialog.ui
scripts/: release.py
slint-app/: Cargo.toml  THEMING.md  TODO.md
slint-app/src/: main.rs
slint-app/src/ui/: mod.rs
slint-app/src/utils/: mod.rs
slint-app/ui/: main_window.slint
slint-app/ui/components/: header_bar.slint  settings_dialog.slint  vm_card.slint
slint-app/ui/styles/: theme.slint
spice-client/: Cargo.toml  E2E_TESTING.md  GTK4_IMPLEMENTATION.md  MINI_HEADER_ISSUE.md  MULTIMEDIA_ARCHITECTURE.md  MULTIMEDIA_README.md  Makefile  PROTOCOL_COMPLIANCE_REPORT.md  README.md  RUST_SPICE_CLIENT_SEQUENCE_DIAGRAM.md  RUST_VS_HTML5_COMPARISON.md  SPICE_CONNECTION_FLOW.md  SPICE_FLOW_COMPARISON.md  SPICE_HTML5_COMMUNICATION_FLOW.md  SPICE_HTML5_CONNECTION_FLOW.md  SPICE_PROTOCOL_REFERENCE.md  TESTING_PLAN.md  TODO.md  WASM_ARCHITECTURE.md  WASM_MIGRATION_GUIDE.md  WASM_QUICKSTART.md  build-wasm.sh  core-protocol-guide.md  docker-compose.spice-test.yml  justfile  run-e2e-tests.sh  run-integration-tests.sh  spice.md  start-spice-vm.sh  test-gtk-client.sh  test-minimal.sh
spice-client/.github/workflows/: e2e-tests.yml
spice-client/benches/: protocol.rs
spice-client/docker/: Dockerfile.e2e-test  Dockerfile.node-test  Dockerfile.qemu  Dockerfile.spice-debug  Dockerfile.test-client  Dockerfile.virt-viewer  Dockerfile.wasm  Dockerfile.wasm-core-test  Dockerfile.wasm-test  Dockerfile.wasm.dev  Dockerfile.websocket-proxy  Dockerfile.ws-proxy  README.md  WASM_README.md  docker-compose.e2e-debug.yml  docker-compose.override.yml  docker-compose.qemu.yml  docker-compose.wasm-core-e2e.yml  docker-compose.wasm-e2e.yml  docker-compose.wasm.yml  docker-compose.yml  supervisord.conf  wasm-demo.html  websocket-proxy-multi.py  websocket-proxy.js  websocket-proxy.py
spice-client/docker/scripts/: download-test-vm.sh  hot-reload-server.py  start-qemu-ticketing.sh  start-qemu.sh  watch-and-serve.sh
spice-client/examples/: basic_client.rs  dioxus_integration.rs
spice-client/src/: client.rs  client_shared.rs  client_tests.rs  error.rs  lib.rs  protocol.rs  test_utils.rs  transport.rs  utils.rs  video.rs  wasm_bindings.rs  wire_format.rs
spice-client/src/channels/: connection.rs  cursor.rs  display.rs  display_tests.rs  display_wasm.rs  inputs.rs  main.rs  mod.rs  tests.rs  video_tests.rs
spice-client/src/multimedia/: audio.rs  display.rs  input.rs  mod.rs  spice_adapter.rs  tests.rs
spice-client/src/multimedia/gtk4/: audio.rs  display.rs  input.rs  mod.rs
spice-client/src/multimedia/sdl2/: audio.rs  display.rs  input.rs  mod.rs
spice-client/src/multimedia/wasm/: audio.rs  display.rs  input.rs  mod.rs
spice-client/src/protocol/: tests.rs
spice-client/src/transport/: tcp.rs  websocket.rs
spice-client/src/video/: frame.rs  mod.rs  native.rs  output.rs  wasm.rs
spice-client/src/wasm/: canvas.rs  cursor.rs  mod.rs  video_renderer.rs
spice-client/tests/: README.md  channel_integration.rs  client_integration.rs  display_integration.rs  multimedia_integration.rs  wasm_test.rs
spice-client/tests/docker/: Dockerfile.spice-server  docker-compose.yml  start-qemu.sh  start-spice-test.sh  supervisord.conf
spice-client/tests/integration/: cursor_test.rs  harness.rs  inputs_test.rs  mod.rs  multi_display_framerate_test.rs  multi_display_test.rs  qemu_integration_test.rs
spice-client/tests/mocks/: mod.rs
spice-client/tests/wasm/: package.json  test-runner.js
spice-client/tests/wasm-core/: core-e2e-test.js  package.json  spice-protocol-test.js
src/: lib.rs  main.rs  modern.css  style.css
src/components/: header.rs  mod.rs  settings.rs  vm_card.rs  vm_create.rs  vm_detail.rs  vm_list.rs
src/models/: config.rs  mod.rs  vm.rs
src/services/: discovery.rs  mod.rs  parser.rs  process_monitor.rs  quickget.rs  tool_manager.rs  vm_manager.rs  web_server.rs
src/ui/: header_bar.rs  main_window.rs  settings_dialog.rs  vm_card.rs  vm_create_dialog.rs  (+1 more)
tests/: integration_test.rs
