[workspace]
members = ["core", "gtk4-app", "dioxus-app"]
resolver = "2"

[workspace.dependencies]
# Common versions
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

[profile.release]
lto = true
opt-level = 3
strip = true