[workspace]
members = ["core", "gtk4-app", "dioxus-app", "spice-client"]
resolver = "2"

[workspace.dependencies]
# Common versions
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

[workspace.lints.clippy]
# Relax some common clippy warnings
uninlined_format_args = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
single_match = "allow"
needless_borrows_for_generic_args = "allow"
redundant_closure = "allow"
redundant_pattern_matching = "allow"
get_first = "allow"
useless_vec = "allow"
clone_on_copy = "allow"
manual_range_contains = "allow"
missing_docs_in_private_items = "allow"

[workspace.lints.rust]
# Allow some rust warnings
async_fn_in_trait = "allow"
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[profile.release]
lto = true
opt-level = 3
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
