[package]
name = "quickemu-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System information
sysinfo = "0.35"

# File watching
notify = "8.0"

# Command execution
which = "8.0"

# HTTP client for downloading quickemu
reqwest = { version = "0.11", features = ["stream"] }

# Archive extraction
zip = { version = "2.1", default-features = false, features = ["deflate"] }

# Path handling
dirs = "6.0"

# Logging
log = "0.4"

# Process management
nix = { version = "0.30", features = ["process"] }

# WebSocket support for VNC proxy
tokio-tungstenite = "0.26"
futures-util = "0.3"

# VNC protocol support
vnc-rs = "0.5"

# Random token generation
rand = "0.8"
hex = "0.4"

# TCP networking
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3.20"
mockall = "0.13"
