[package]
name = "dioxus-app"
version = "0.1.0"
authors = ["Alexandre Rosenfeld <alex@rosenfeld.one>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
quickemu-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs", "process", "signal"], default-features = false }
anyhow = "1.0"
once_cell = "1.19"
tracing = "0.1"
which = "8.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
