[package]
name = "quickemu-manager-dioxus"
version = "0.1.0"
authors = ["Alexandre Rosenfeld <alex@rosenfeld.one>"]
edition = "2021"
license = "GPL-3.0"

[[bin]]
name = "quickemu-manager"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack", "desktop"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time"], default-features = false }
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = { version = "0.4", features = ["wasm-bindgen"] }
web-sys = { version = "0.3", features = ["Storage", "Window", "Document", "Element", "Location", "HtmlElement", "WebSocket", "MessageEvent", "BinaryType", "Event", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "CloseEvent", "ErrorEvent", "CssStyleDeclaration", "Node"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
spice-client = { path = "../spice-client" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
quickemu-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs", "process", "signal"], default-features = false }
anyhow = "1.0"
once_cell = "1.19"
tracing = "0.1"
which = "8.0"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
