[package]
name = "quickemu-manager-gtk"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[[bin]]
name = "quickemu-manager"
path = "src/main.rs"

[dependencies]
# GTK4 UI dependencies
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
glib = "0.20"
gio = "0.20"
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }

# Core functionality
quickemu-core = { path = "../core" }
spice-client = { path = "../spice-client", features = ["backend-gtk4"] }

# Additional dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Optional web server dependencies
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
glib-build-tools = "0.20"

[features]
default = []
web-server = ["axum", "tower", "tower-http"]

