[package]
name = "spice-client"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A pure Rust SPICE client library with native and WebAssembly support"
documentation = "https://docs.rs/spice-client"
homepage = "https://github.com/yourusername/quickemu-manager"
repository = "https://github.com/yourusername/quickemu-manager"
license = "MIT"
readme = "README.md"
keywords = ["spice", "remote-desktop", "virtualization", "wasm", "client"]
categories = ["network-programming", "wasm", "virtualization"]
exclude = [".github/*", "examples/*"]

[dependencies]
bytes = "1.0"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
base64 = "0.22"

# WASM-compatible dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", features = ["sync", "macros", "time", "io-util"], default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Window",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Native dependencies  
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
dioxus = "0.5"
base64 = "0.22"
criterion = "0.5"
proptest = "1.0"
async-trait = "0.1"

[[example]]
name = "dioxus_integration"
required-features = []

[[example]]
name = "basic_client"
path = "examples/basic_client.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = []

[[test]]
name = "mocks"
path = "tests/mocks/mod.rs"
required-features = []

[[bench]]
name = "protocol"
harness = false